# stomptalk

./: .gitignore  CMakeLists.txt  CMakeLists_fixed.txt  LICENSE  README.md  metadata.xml  package-lock.json  package.json  stomptalk-1.3.9999.ebuild  stomptalk-1.4.0.ebuild  stomptalk-1.6.0.ebuild  stomptalk-1.8.0.ebuild  stomptalk.ebuild  stomptalk.pro  stomptalkgen.js
.github/workflows/: build.yaml  linux.yaml  macos.yaml  windows.yaml  windows.yml
build-bigtux/: .ninja_deps  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build-bigtux/.cmake/api/v1/reply/: cache-v2-4bb62f788be93454367e.json  cmakeFiles-v1-42e898a69b2907527f74.json  codemodel-v2-07a2113d1ad716f67b8d.json  index-2024-11-13T11-39-41-0502.json  toolchains-v1-59cc03fb871254c42165.json
build-neotux/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json  perf.data  perf.data.old  purestomp  stomptalk_test  stomptalk_unit_test  test_strict
build-neotux/.cmake/api/v1/reply/: cache-v2-b4ccec0e948964734d96.json  cmakeFiles-v1-0d053f3af6880d5a2641.json  codemodel-v2-28636f06aebcfa6e60ed.json  index-2025-09-03T18-40-04-0543.json  target-purestomp-Release-39d35745b1296688f93c.json  target-stomptalk_test-Release-f7117fe7ae4b273a8e51.json  target-stomptalk_unit_test-Release-5e50b4d9a57ef4d0a08b.json  toolchains-v1-22cca17d3fb6c429b69b.json
build-neotux/Testing/: TAG
build-neotux/Testing/20250829-0636/: Test.xml
build-neotux/Testing/20250830-0738/: Test.xml
build-neotux/Testing/20250902-1910/: Test.xml
build-neotux/Testing/20250903-1525/: Test.xml
build-neotux/Testing/Temporary/: CTestCostData.txt
build-threadtuxr/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json  stomptalk_test
build-threadtuxr/.cmake/api/v1/reply/: cache-v2-c8a16832515108e2e6b9.json  cmakeFiles-v1-e674e59bb056f33ccf20.json  codemodel-v2-87ebe1ee50a50ba42b3e.json  index-2025-08-29T09-55-45-0242.json  target-stomptalk-Release-975d8ca96164e84ce5e9.json  target-stomptalk_test-Release-3ea8fb01b545cf290f1e.json  toolchains-v1-54c6ca50234c3ada7510.json
build-threadtuxr/Testing/: TAG
build-threadtuxr/Testing/20250829-0910/: Test.xml
build-threadutx/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build-threadutx/.cmake/api/v1/reply/: cache-v2-1b5c982a46bf7f3872a0.json  cmakeFiles-v1-b64ae485c8b59e51abe6.json  codemodel-v2-c9a6bc6f443ba90d8a0c.json  index-2024-11-13T10-19-15-0765.json  target-stomptalk-Debug-85f7db1dc53ccb3a7b15.json  toolchains-v1-a09c990fb338dcf8fe3d.json
cmake/: stomptalkConfig.cmake.in
fuzz/: README.md  fuzz_stomp_chunked.c  fuzz_stomp_large_header.c  fuzz_stomp_parser.c
fuzz/corpus/: connected_frame  message_content_length  message_escape  message_lf  message_no_length  send_frame
fuzz/corpus/chunked/: connected_frame_chunk1  escaped_header_value_chunk6  message_content_length_chunk3  message_escape_chunk5  message_lf_chunk7  message_no_length_chunk11  message_partial_headers_chunk8  send_content_length_body_chunk3  send_frame_chunk2  truncated_send_method_chunk3
fuzz/corpus/large_header/: key_crlf_4096  key_crlf_4097  key_lf_4097  value_crlf_4095  value_crlf_4097  value_lf_4096  value_lf_4097  value_mixed_printable_payload  value_nul_payload
fuzz/corpus/parser/: content_length_single_letter_method_lf_body  content_length_unknown_method_crlf_body  escaped_header_minimal
include/bakcup/stomptalk/: antoull.h  fnv1a.hpp  hashval.hpp  hook_base.hpp  method.h  parser.h  parser.hpp  parser_hook.hpp  stackbuf.hpp  type.h
include/stomptalk/: antoull.h  antoull.hpp  basic_text.hpp  cmd_tag.hpp  config.h  content.hpp  crefwrap.hpp  fnv1a.hpp  frame.hpp  frame_base.hpp  frame_base_fwd.hpp  hashval.hpp  header.h  header.hpp  header_arr.hpp  header_store.hpp  hook_base.hpp  memeq.hpp  method.h  method.hpp  parser.h  parser.hpp  parser_hook.hpp  perf.hpp  rabbitmq.hpp  stackbuf.hpp  stomplay.hpp  stomplay_hook.hpp  strref.hpp  sv.hpp  tag.hpp  type.h  user_hook.hpp  v12.hpp  validator.hpp  version.hpp
include/stomptalk/btpro/: connection.hpp  frame.hpp  handler.hpp  hdrstok.hpp  packet.hpp  receipt_pool.hpp  stomplay.hpp  subs_pool.hpp  subscription.hpp  v12.hpp
include/stomptalk/tag/: header.hpp  method.hpp
src/: content.cpp  frame_base.cpp  header_store.cpp  hook_base.cpp  internal.h  memeq.hpp  mkstr.hpp  parser.c  parser.cpp  parser_hook.cpp  rabbitmq.cpp  stomplay.cpp  stomplay_hook.cpp  stomptalk.cpp  strref.cpp  tag.cpp  user_hook.cpp  v12.cpp  version.cpp
src/backup/: parser.cpp
src/btpro/: connection.cpp  frame.cpp  handler.cpp  receipt_pool.cpp  stomplay.cpp
test/: main.cpp  purestomp.c  unit_test.cpp
